# approach_control

./: .gitignore  .gitmodules  README.md
approach_control_config/: CMakeLists.txt  package.xml
approach_control_head/: CMakeLists.txt  package.xml  setup.py
approach_control_launch/: CMakeLists.txt  package.xml
approach_control_manipulator/: CMakeLists.txt  package.xml  setup.py
approach_control_manipulator/nodes/: check_voltage.py  execute_gesture.py  gesture_play.py  gesture_record.py  gesture_srv.py  record_gesture.py
approach_control_manipulator/nodes/approach_control_manipulator/: CloseGripper.py  Default.py  Distance.py  GestureAction.py  GestureExecute.py  GoTo.py  OpenGripper.py  Rest.py
approach_control_manipulator/nodes/approach_control_manipulator/utils/: arm_mod.py
approach_control_movement/: CMakeLists.txt  package.xml  setup.py
approach_control_navigation/: CMakeLists.txt  package.xml  setup.py
approach_control_people/: CMakeLists.txt  package.xml  setup.py
approach_control_people/nodes/approach_control_people/: DistanceDisplay.py  DistanceVerification.py  GetDistance.py  GetDistanceInvert.py  IdentifyPerson.py  __init__.py
approach_control_people/nodes/approach_control_people/faces/: FaceFinder.py  GenderDiscover.py  Map.py  PersonFaceCapture.py  Quads.py  Region.py  ULBP.py  Utils.py  lbp_utils.py  load_database.py
approach_control_people/nodes/approach_control_people/skeleton/: CheckDistance.py  GetSkeleton.py  SkeletonTracker.py  pub_distance.py
approach_control_robot_face/: CMakeLists.txt  package.xml  setup.py
(+123 files in other folders)
